--- a/index.html
+++ b/index.html
@@ -2,52 +2,83 @@
 <html>
 <head>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
-    <title>DRM Video Player</title>
+    <title>DRM Player with Quality Selector</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.1/shaka-player.compiled.js"></script>
     <style>
         body {
-            background-color: #000;
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            background-color: #000;
             display: flex;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             height: 100vh;
+            color: #fff;
         }
+
         #player-container {
-            width: 100%;
-            height: 100%;
             position: relative;
+            width: 80%;
+            max-width: 800px;
+            background-color: #000;
+            border-radius: 10px;
+            overflow: hidden;
         }
+
         video {
             width: 100%;
             height: 100%;
+            display: block;
+            background-color: #000;
+        }
+
+        #controls {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px;
+        }
+
+        #quality-selector {
+            background: #6F00FF;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        #quality-selector option {
+            background: #000;
+            color: white;
         }
     </style>
 </head>
 <body>
     <div id="player-container">
         <video id="video" autoplay controls></video>
+        <div id="controls">
+            <div>
+                <button id="quality-selector">Quality</button>
+            </div>
+        </div>
     </div>
+
     <script>
-        // انتظار تحميل الصفحة
         document.addEventListener('DOMContentLoaded', async () => {
-            // تحديد عناصر الفيديو
             const video = document.getElementById('video');
+            const qualitySelector = document.getElementById('quality-selector');
+            const manifestUri = "https://ssc-3-enc.edgenextcdn.net/out/v1/42e86125555242aaa2a12056832e7814/index.mpd";
+            const drmKey = "7de5dd08ad8041d586c2f16ccc9490a1:5e1503f3398b34f5099933fedab847ef";
 
-            // قراءة معلمات الرابط
-            const urlParams = new URLSearchParams(window.location.search);
-            const manifestUri = urlParams.get("link") || "https://ssc-3-enc.edgenextcdn.net/out/v1/42e86125555242aaa2a12056832e7814/index.mpd";
-            const drmKey = urlParams.get("key") || "7de5dd08ad8041d586c2f16ccc9490a1:5e1503f3398b34f5099933fedab847ef";
-
-            // فصل المفتاح والمفتاح السري
             const [keyId, keyValue] = drmKey.split(":");
 
-            // إعداد Shaka Player
             const player = new shaka.Player(video);
 
-            // تكوين DRM باستخدام ClearKey
             player.configure({
                 drm: {
                     clearKeys: {
@@ -56,19 +87,32 @@
                 }
             });
 
-            // معالجة الأخطاء
             player.addEventListener('error', (event) => {
                 console.error('Error code', event.detail.code, 'object', event.detail);
             });
 
-            // تحميل الفيديو
             try {
                 await player.load(manifestUri);
                 console.log('The video has been successfully loaded!');
+
+                // Populate quality options
+                const tracks = player.getVariantTracks();
+                tracks.forEach(track => {
+                    const option = document.createElement('option');
+                    option.value = track.id;
+                    option.textContent = `${track.height}p (${Math.round(track.bandwidth / 1024)} kbps)`;
+                    qualitySelector.appendChild(option);
+                });
+
+                // Change quality on selection
+                qualitySelector.addEventListener('change', () => {
+                    const selectedTrackId = parseInt(qualitySelector.value, 10);
+                    player.selectVariantTrack(tracks.find(track => track.id === selectedTrackId), true);
+                });
             } catch (error) {
                 console.error('Error loading video', error);
             }
         });
     </script>
 </body>
-</html
+</html>
