--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
-    <title>Custom DRM Player</title>
+    <title>Code Themes DRM Player</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.1/shaka-player.compiled.js"></script>
     <style>
         body {
@@ -16,7 +16,7 @@
             z-index: 1;
         }
 
-        #player-container { 
+        #player {
             position: fixed;
             display: flex;
             align-items: center;
@@ -30,71 +30,19 @@
         }
 
         video {
-            width: 100%;
-            height: 100%;
-            background: #000;
-        }
-
-        #controls {
-            position: absolute;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: rgba(0, 0, 0, 0.8);
-            padding: 10px;
-            border-radius: 10px;
-        }
-
-        .control-button {
-            background: #6F00FF;
-            color: white;
-            border: none;
-            margin: 0 5px;
-            padding: 10px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 14px;
-            font-weight: bold;
-        }
-
-        .control-button:hover {
-            background: #4a00b6;
-        }
-
-        #quality-selector {
-            background: #333;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        #quality-selector option {
-            background: #000;
-            color: white;
+            max-width: 100%;
+            max-height: 100%;
         }
     </style>
 </head>
 <body>
-    <div id="player-container">
-        <video id="video" autoplay></video>
-        <div id="controls">
-            <button id="play-pause" class="control-button">Play/Pause</button>
-            <select id="quality-selector" class="control-button">
-                <option>Loading qualities...</option>
-            </select>
-        </div>
+    <div id="player">
+        <video id="video" autoplay controls></video>
     </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
             const video = document.getElementById('video');
-            const qualitySelector = document.getElementById('quality-selector');
-            const playPauseButton = document.getElementById('play-pause');
             const manifestUri = "https://ssc-3-enc.edgenextcdn.net/out/v1/42e86125555242aaa2a12056832e7814/index.mpd";
             const drmKey = "7de5dd08ad8041d586c2f16ccc9490a1:5e1503f3398b34f5099933fedab847ef";
 
@@ -118,33 +66,6 @@
             try {
                 await player.load(manifestUri);
                 console.log('The video has been successfully loaded!');
-
-                // ملء قائمة الجودات
-                const tracks = player.getVariantTracks();
-                qualitySelector.innerHTML = ''; // مسح الخيارات الافتراضية
-                tracks.forEach(track => {
-                    const option = document.createElement('option');
-                    option.value = track.id;
-                    option.textContent = `${track.height}p (${Math.round(track.bandwidth / 1024)} kbps)`;
-                    qualitySelector.appendChild(option);
-                });
-
-                // تغيير الجودة عند الاختيار
-                qualitySelector.addEventListener('change', () => {
-                    const selectedTrackId = parseInt(qualitySelector.value, 10);
-                    player.selectVariantTrack(tracks.find(track => track.id === selectedTrackId), true);
-                });
-
-                // التحكم في تشغيل الفيديو
-                playPauseButton.addEventListener('click', () => {
-                    if (video.paused) {
-                        video.play();
-                        playPauseButton.textContent = 'Pause';
-                    } else {
-                        video.pause();
-                        playPauseButton.textContent = 'Play';
-                    }
-                });
             } catch (error) {
                 console.error('Error loading video', error);
             }
