--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <title>Code Themes DRM Player</title>
+    <script src="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.js"></script>
+    <script src="https://assets.nlm.nih.gov/jwplayer/8/jwplayer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.1/shaka-player.compiled.js"></script>
+    <script src="https://vjs.zencdn.net/8.5.2/video.min.js"></script>
+    <link href="https://vjs.zencdn.net/8.5.2/video-js.css" rel="stylesheet"/>  
     <style>
         body {
             background-color: #000000;
@@ -16,7 +20,7 @@
             z-index: 1;
         }
 
-        #player {
+        #player { 
             position: fixed;
             display: flex;
             align-items: center;
@@ -26,7 +30,6 @@
             width: 100%;
             height: 100%;
             z-index: 2;
-            background: #000;
         }
 
         video {
@@ -42,32 +45,50 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
-            const video = document.getElementById('video');
-            const manifestUri = "https://ssc-3-enc.edgenextcdn.net/out/v1/42e86125555242aaa2a12056832e7814/index.mpd";
-            const drmKey = "7de5dd08ad8041d586c2f16ccc9490a1:5e1503f3398b34f5099933fedab847ef";
+            const urlParams = new URLSearchParams(window.location.search);
+            const playerType = urlParams.get("player") || "fluid";
+            const manifestUri = urlParams.get("manifest") || "";
+            const drmKey = urlParams.get("drmkey") || "";
 
-            const [keyId, keyValue] = drmKey.split(":");
+            if (playerType === "shaka" && manifestUri && drmKey) {
+                const video = document.getElementById('video');
+                const [keyId, keyValue] = drmKey.split(":");
 
-            // إعداد Shaka Player
-            const player = new shaka.Player(video);
+                const player = new shaka.Player(video);
 
-            player.configure({
-                drm: {
-                    clearKeys: {
-                        [keyId]: keyValue
+                player.configure({
+                    drm: {
+                        clearKeys: {
+                            [keyId]: keyValue
+                        }
                     }
+                });
+
+                player.addEventListener('error', (event) => {
+                    console.error('Error code', event.detail.code, 'object', event.detail);
+                });
+
+                try {
+                    await player.load(manifestUri);
+                    console.log('The video has been successfully loaded!');
+                } catch (error) {
+                    console.error('Error loading video', error);
                 }
-            });
+            } else if (playerType === "fluid") {
+                const videoElement = document.createElement("video");
+                videoElement.id = "video-id";
+                videoElement.style.width = "100%";
+                videoElement.style.height = "100%";
+                document.getElementById("player").appendChild(videoElement);
 
-            player.addEventListener('error', (event) => {
-                console.error('Error code', event.detail.code, 'object', event.detail);
-            });
-
-            try {
-                await player.load(manifestUri);
-                console.log('The video has been successfully loaded!');
-            } catch (error) {
-                console.error('Error loading video', error);
+                fluidPlayer('video-id', {
+                    layoutControls: {
+                        autoplay: true,
+                        mute: false
+                    }
+                });
+            } else {
+                console.error("Invalid player type or missing parameters");
             }
         });
     </script>
