--- a/index.html
+++ b/index.html
@@ -17,71 +17,22 @@
         }
 
         #player-container {
-            width: 80%;
-            max-width: 800px;
+            width: 100%;
+            height: 100%;
             position: relative;
         }
 
         #video {
             width: 100%;
-            border-radius: 10px;
-            overflow: hidden;
-        }
-
-        .controls {
-            position: absolute;
-            bottom: 10px;
-            left: 10px;
-            right: 10px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background: rgba(0, 0, 0, 0.7);
-            border-radius: 5px;
-            padding: 5px 10px;
-            opacity: 0;
-            transition: opacity 0.3s;
-        }
-
-        #player-container:hover .controls {
-            opacity: 1;
-        }
-
-        .button {
-            background: none;
-            border: none;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-        }
-
-        .progress-bar {
-            flex: 1;
-            height: 5px;
-            background: #444;
-            border-radius: 5px;
-            margin: 0 10px;
-            position: relative;
-        }
-
-        .progress-bar .progress {
             height: 100%;
-            background: #6F00FF;
-            width: 0%;
-            border-radius: 5px;
+            object-fit: cover;
+            border-radius: 0;
         }
     </style>
 </head>
 <body>
     <div id="player-container">
-        <video id="video" autoplay controls></video>
-        <div class="controls">
-            <button id="play-pause" class="button">⏯</button>
-            <div class="progress-bar">
-                <div class="progress"></div>
-            </div>
-            <button id="mute-unmute" class="button">🔇</button>
-        </div>
+        <video id="video" autoplay muted playsinline></video>
     </div>
 
     <script>
@@ -117,31 +68,6 @@
             } catch (error) {
                 console.error('Error loading video', error);
             }
-
-            // Custom controls functionality
-            const playPauseButton = document.getElementById('play-pause');
-            const muteUnmuteButton = document.getElementById('mute-unmute');
-            const progressBar = document.querySelector('.progress-bar .progress');
-
-            playPauseButton.addEventListener('click', () => {
-                if (video.paused) {
-                    video.play();
-                    playPauseButton.textContent = '⏸';
-                } else {
-                    video.pause();
-                    playPauseButton.textContent = '▶';
-                }
-            });
-
-            muteUnmuteButton.addEventListener('click', () => {
-                video.muted = !video.muted;
-                muteUnmuteButton.textContent = video.muted ? '🔊' : '🔇';
-            });
-
-            video.addEventListener('timeupdate', () => {
-                const percentage = (video.currentTime / video.duration) * 100;
-                progressBar.style.width = percentage + '%';
-            });
         });
     </script>
 </body>
