--- a/index.html
+++ b/index.html
@@ -14,16 +14,26 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            overflow: hidden;
+        }
+
+        #video-container {
+            width: 100%;
+            height: 100%;
+            position: relative;
         }
 
         video {
-            width: 80%;
-            height: auto;
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* يجعل الفيديو يغطي الشاشة دون تشويه */
         }
     </style>
 </head>
 <body>
-    <video id="video-id" controls></video>
+    <div id="video-container">
+        <video id="video-id" controls></video>
+    </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
