--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            overflow: hidden;
         }
 
         #video-container {
-            width: 100%;
-            height: 100%;
+            width: 80%; /* عرض الفيديو 80% من عرض الشاشة */
+            max-width: 1280px; /* أقصى عرض للفيديو */
+            aspect-ratio: 16 / 9; /* نسبة أبعاد الفيديو */
+            background: #000;
             position: relative;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.8);
         }
 
         video {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* يجعل الفيديو يغطي الشاشة دون تشويه */
+            border-radius: 8px;
         }
     </style>
 </head>
@@ -64,7 +66,7 @@
                         mute: false,
                         playbackRateEnabled: true,
                         allowDownload: false,
-                        fillToContainer: true
+                        fillToContainer: false
                     }
                 });
             } catch (error) {
