--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 console.log('تم تحميل الفيديو المحمي بـ DRM بنجاح.');
 
                 // إعداد تصميم JW Player
-                jwplayer("jwplayerDiv").setup({
+                const player = jwplayer("jwplayerDiv").setup({
                     file: manifest,
                     width: "100%",
                     height: "100%",
@@ -96,6 +96,21 @@
                     },
                     skin: {
                         name: "glow"
+                    }
+                });
+
+                // إضافة ميزة التدوير عند ملء الشاشة
+                player.on('fullscreen', (event) => {
+                    if (event.fullscreen) {
+                        if (screen.orientation && screen.orientation.lock) {
+                            screen.orientation.lock('landscape').catch((err) => {
+                                console.warn('لم يتم قفل الشاشة:', err);
+                            });
+                        }
+                    } else {
+                        if (screen.orientation && screen.orientation.unlock) {
+                            screen.orientation.unlock();
+                        }
                     }
                 });
 
