--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
         }
 
         #video-container {
-            width: 80%;
-            max-width: 1280px;
-            aspect-ratio: 16 / 9;
+            width: 100%;
+            height: 100%;
             background: #000;
             position: relative;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.8);
         }
 
         #jwplayerDiv {
             width: 100%;
             height: 100%;
+        }
+
+        .jw-button-container .jw-icon-fullscreen {
+            display: none !important; /* إخفاء زر ملء الشاشة */
         }
     </style>
 </head>
@@ -44,6 +46,17 @@
                 manifest: params.get('manifest'),
                 drmKey: params.get('drmkey')
             };
+        }
+
+        // تفعيل ملء الشاشة دائمًا
+        async function enableFullscreen(element) {
+            if (element.requestFullscreen) {
+                await element.requestFullscreen();
+            } else if (element.webkitRequestFullscreen) {
+                await element.webkitRequestFullscreen();
+            } else if (element.msRequestFullscreen) {
+                await element.msRequestFullscreen();
+            }
         }
 
         document.addEventListener('DOMContentLoaded', async () => {
@@ -99,17 +112,16 @@
                     }
                 });
 
-                // إضافة ميزة التدوير عند ملء الشاشة
-                player.on('fullscreen', (event) => {
-                    if (event.fullscreen) {
-                        if (screen.orientation && screen.orientation.lock) {
-                            screen.orientation.lock('landscape').catch((err) => {
-                                console.warn('لم يتم قفل الشاشة:', err);
-                            });
-                        }
-                    } else {
-                        if (screen.orientation && screen.orientation.unlock) {
-                            screen.orientation.unlock();
+                // فرض وضع ملء الشاشة دائمًا
+                player.on('ready', async () => {
+                    await enableFullscreen(document.getElementById('video-container'));
+
+                    // قفل الشاشة في الوضع الأفقي
+                    if (screen.orientation && screen.orientation.lock) {
+                        try {
+                            await screen.orientation.lock('landscape');
+                        } catch (error) {
+                            console.warn('تعذر قفل الشاشة:', error);
                         }
                     }
                 });
