--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <meta charset="UTF-8">
     <title>Shaka Player with JW Design</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.1/shaka-player.compiled.js"></script>
     <script src="//content.jwplatform.com/libraries/SAHhwvZq.js"></script>
@@ -28,8 +28,14 @@
             height: 100%;
         }
 
+        /* إخفاء زر التوسيع */
         .jw-button-container .jw-icon-fullscreen {
-            display: none !important; /* إخفاء زر ملء الشاشة */
+            display: none !important;
+        }
+
+        /* إخفاء أي زر تحكم آخر قد يسبب تداخلًا */
+        .jw-button-container .jw-icon {
+            display: none !important;
         }
     </style>
 </head>
